src/test/resources/regression/verification/overflow/invalid/Overflow5.scala
import leon.lang._

object Overflow5 {

  def foo5(x: Int, y: Int): Int = {
    x + y
  }

}
